--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="brd-div">
-	<canvas id="brd" height="2400" width="2400">Your current browser does not support Canvas! Use Firefox or Google Chrome.</canvas>
+	<canvas id="brd" height="2400" width="2400"></canvas>
 	</div>
 
 	<script type="text/javascript" src="js/events.js"></script>
