Fixed a couple bugs.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.js"></script>
 </head>
 <body>
+	<div id="dice-display">
+	    <div id="dice-span">
+		<div id="d1" class="die"></div>
+		<div id="d2" class="die"></div>
+	    </div>
+	</div>
+
 	<div id="brd-div"> 
 	<canvas id="brd" height="2400" width="2400"></canvas>
 	</div>
